# archti-backend

./: .env.example  .gitignore  .rautomod  Cargo.toml
migration/: Cargo.toml
migration/src/: .rautomod  lib.rs  m20260321_041852_create_table_companies.rs  m20260321_043556_create_table_users.rs  m20260321_050225_create_table_permissions.rs  m20260321_140601_create_table_plans.rs  m20260321_141334_create_table_plan_features.rs  m20260321_142529_create_table_company_addresses.rs  m20260321_144012_create_table_company_memberships.rs  m20260321_144722_create_table_roles.rs  m20260321_145219_create_table_plan_versions.rs  m20260321_150920_create_table_specialties.rs  m20260321_151319_create_table_certifications.rs  m20260321_151931_create_table_payment_methods.rs  m20260321_153334_create_table_service_catalog_items.rs  m20260321_154602_create_table_service_expense_presets.rs  m20260321_160001_create_table_service_order_status_setps.rs  m20260321_161049_create_table_stock_products.rs  m20260321_173415_create_table_resources.rs  m20260321_175712_create_table_plan_version_features.rs  m20260321_180536_create_table_company_subscriptions.rs  m20260321_182739_create_table_company_feature_overrides.rs  m20260321_184247_create_table_role_permissions.rs  m20260321_185438_create_table_membership_roles.rs  m20260321_190530_create_table_technicians.rs  m20260321_195712_create_table_clients.rs  m20260321_201053_create_table_inventory_items.rs  m20260321_204738_create_table_resource_machines.rs  m20260322_011150_create_table_quotes.rs  (+24 more)
scripts/: gen_seaorm_entities.sh
src/: main.rs
(+227 files in other folders)
