[package]
name = "archti-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["migration"]

[dependencies]
migration = { path = "migration" }
async-trait = "0.1.89"
regex = "1.12.3"
salvo = { version = "0.89.2", features = [
    "affix-state",
    "flash",
    "jwt-auth",
    "logging",
    "cookie"
] }
sea-orm = { version = "2.0.0-rc", features = ["macros", "sqlx-postgres"] }
tokio = { version = "1.50.0", features = ["macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
rust_decimal = "1.40.0"
crypto = { version = "0.5.1", features = ["password-hash"] }
argon2 = "0.5.3"
time = "0.3.47"
jsonwebtoken = { version = "10.3.0" }
strum = "0.28.0"
strum_macros = "0.28.0"
serde_json = "1.0.149"
garde = { version = "0.22.1", features = [
    "credit-card",
    "serde",
    "phone-number",
    "email",
    "full",
] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
lettre = { version = "0.11.19", default-features = false, features = [  "tokio1-native-tls", "smtp-transport", "builder", "hostname"] }
magic-crypt = "4.0.1"
handlebars = { version = "6.4.0", features = ["dir_source", "rust-embed"] }
css-inline = "0.20.1"
